# apecode

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/apecode/: __init__.py  __main__.py  agent.py  cli.py  commands.py  console.py  mcp.py  model_adapters.py  plugins.py  skills.py  subagents.py  system_prompt.py  tools.py
tests/: test_agent.py  test_commands.py  test_mcp.py  test_model_adapters.py  test_plugins.py  test_skills.py  test_subagents.py  test_tools.py
