[project]
name = "apecode"
version = "0.0.2"
description = "A terminal code agent powered by AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.0.0",
    "anthropic>=0.80.0",
    "fastmcp>=2.0.0",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.0",
]
authors = [
    { name = "ApeCode Team" }
]
license = { text = "Apache-2.0" }
keywords = ["ai", "agent", "cli", "code", "terminal"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
ape = "apecode.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 180
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, etc.)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["apecode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
